7050554: JSR 292 - need optimization for selectAlternative

Reviewed-by: kvn, jrose